syntax = "proto3";

package Transidious.Serialization;
option csharp_namespace = "Transidious.Serialization";

import "Common.proto";
import "google/protobuf/any.proto";

message PathStep {
    enum PathStepKind {
        Walk = 0;
        Drive = 1;
        PartialDrive = 2;
        PublicTransit = 3;
        Wait = 4;
    }

    message WalkStep {
        Vector2 from = 1;
        Vector2 to = 2;
    }

    message DriveStep {
        uint32 segmentID = 1;
        bool backward = 2;
    }

    message PartialDriveStep {
        Vector2 startPos = 1;
        Vector2 endPos = 2;
        uint32 segmentID = 3;
        bool backward = 4;
        bool partialStart = 5;
        bool partialEnd = 6;
    }

    message PublicTransitStep {
        uint32 lineID = 1;
        repeated uint32 routeIDs = 2;
    }

    message TurnStep {
        uint32 fromSegmentID = 1;
        bool fromBackward = 2;
        uint32 toSegmentID = 3;
        bool toBackward = 4;
        uint32 intersectionID = 5;
    }

    message WaitStep {
        float waitingTime = 1;
    }

    PathStepKind kind = 1;
    uint64 timestamp = 2;
    google.protobuf.Any details = 3;
}

message PathPlanningOptions {
    bool allowCar = 1;
    bool allowWalk = 2;

    uint64 startID = 3;
    uint64 endID = 4;

    uint64 time = 5;

    float maxWalkingDistance = 6;
    float walkingTimeFactor = 7;
    float travelTimeFactor = 8;
    float waitingTimeFactor = 9;
    float carTimeFactor = 10;
    float changingPenalty = 11;
}

message PathPlanningResult {
    float cost = 1;
    float duration = 2;
    uint64 leaveBy = 3;
    uint64 arriveAt = 4;
    repeated PathStep steps = 5;
    PathPlanningOptions options = 6;
}

message ActivePath {
    uint32 citizenId = 1;
    PathPlanningResult path = 2;
    int64 _waitUntil = 3;
    int32 _currentStep = 4;
    float _currentStepProgress = 5;
    float _currentVelocity = 6;
}

message Car {
    uint32 id = 1;
    uint32 driverId = 2;
    uint32 carModel = 3;
    Vector2 position = 4;
    Color color = 5;
}

message Citizen {
    enum Occupation {
        Worker = 0;
        Retired = 1;
        Kindergarden = 2;
        ElementarySchoolStudent = 3;
        HighSchoolStudent = 4;
        UniversityStudent = 5;
        Trainee = 6;
    }

    enum RelationshipKind {
        SignificantOther = 0;
    }

    message Relationship {
        RelationshipKind kind = 1;
        uint32 citizenId = 2;
    }

    enum PointOfInterestKind {
        Home = 0;
        Work = 1;
        School = 2;
        GroceryStore = 3;
    }

    message PointOfInterest {
        PointOfInterestKind kind = 1;
        uint32 buildingId = 2;
    }

    message HappinessInfluence {
        string descriptionKey = 1;
        float influence = 2;
        int32 ticks = 3;
        float relativeCap = 4;
        float absoluteCapLo = 5;
        float absoluteCapHi = 6;
    }

    message ScheduledEvent {
        uint32 startsAt = 1;
        PathPlanningResult path = 2;
        ScheduledEvent nextEvent = 3;
        PointOfInterest place = 4;
    }

    uint32 id = 1;
    string firstName = 2;
    string lastName = 3;
    uint32 age = 4;
    uint32 birthday = 5;
    bool female = 6;
    Occupation occupation = 7;
    float money = 8;
    bool educated = 9;
    uint32 happiness = 10;

    repeated Relationship relationships = 11;
    repeated PointOfInterest pointsOfInterest = 12;
    repeated HappinessInfluence happinessInfluences = 13;

    uint32 carID = 14;
    Vector2 currentPosition = 15;
    ActivePath activePath = 16;
    int32 scheduleIdx = 17;
    uint32 scheduleID = 18;
    Color preferredColor = 19;
    PathPlanningOptions transitPreferences = 20;
}